--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     <img src="plano.png" id="plano">
     
     <svg id="overlay" viewBox="0 0 1000 600">
-      <!-- ACÁ VAN LOS POLÍGONOS -->
+      <<rect x="100" y="100" width="200" height="120" fill="red" opacity="0.6" />
+>
     </svg>
   </div>
 
