--- a/index.html
+++ b/index.html
@@ -34,44 +34,39 @@
   <title>Mapa de Lotes</title>
 
   <style>
-    #mapa {
-      position: relative;
-      width: 100%;
-      max-width: 1000px;
-    }
+    #contenedor {
+  position: relative;
+  width: 100%;
+}
 
-    #plano {
-      width: 100%;
-      display: block;
-    }
+#plano {
+  width: 100%;
+  display: block;
+}
 
-    #overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
+#svg-lotes {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
-    .lote {
-      fill: rgba(0, 0, 255, 0.3);
-      stroke: blue;
-      stroke-width: 2;
-    }
   </style>
 </head>
 
 <body>
+  <div id="contenedor">
+    <img id="plano" src="plano.png">
 
-  <div id="mapa">
-    <img src="plano.png" id="plano">
-    
-    <svg id="overlay" viewBox="0 0 1000 600">
-      <<rect x="100" y="100" width="200" height="120" fill="red" opacity="0.6" />
->
+    <svg id="svg-lotes"
+         viewBox="0 0 3000 2000"
+         preserveAspectRatio="xMidYMid meet">
+         
+      <rect x="200" y="200" width="300" height="150"
+            fill="red" opacity="0.5" />
     </svg>
   </div>
-
 </body>
 </html>
 >
