--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     #contenedor {
       position: relative;
       width: 100%;
+      max-width: 1080px;   /* para que se vea completo en desktop */
+      margin: 0 auto;
     }
 
     #plano {
@@ -25,20 +27,24 @@
       left: 0;
       width: 100%;
       height: 100%;
+      pointer-events: none; /* importante por ahora */
     }
   </style>
 </head>
 
 <body>
   <div id="contenedor">
-    <img id="plano" src="plano.png">
+    <img id="plano" src="plano.png" />
 
     <svg id="svg-lotes"
          viewBox="0 0 1080 1920"
          preserveAspectRatio="xMidYMid meet">
 
-      <rect x="500" y="500" width="400" height="250"
-            fill="red" opacity="0.5" />
+      <rect x="500" y="500"
+            width="400"
+            height="250"
+            fill="red"
+            opacity="0.5" />
 
     </svg>
   </div>
